# fb-to-bq

./: .gitignore  .replit  BigQueryClient.py  Config.py  DataValidator.py  Dockerfile  FacebookClient.py  FacebookToBigQueryPipeline.py  KPIMappingManager.py  SchemaRegistry.py  big-query.py  bigquery.py  cloudbuild.yaml  facebook.py  kpi_event_mapping_table.py  main.py  pyproject.toml  rollup.py  schema.py  test.py  validate.py
